deployment/kubernetes/base/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
  namespace: default        # change to your app's namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
  - http:                   # no host
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weatherapp-ui   # your service name
            port:
              number: 3000

      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
